# ekt

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  ekt.h  ekt_types.h  tell_hash.h
src/: CMakeLists.txt  ekt-config.cmake.in  ekt.c  ekt.pc.in  ekt_types.h
tests/: CMakeLists.txt  conn_test.sh.in  ekt_test_conn.c  ekt_test_local.c  simple_test.cpp
